--- a/app/templates/shared/header.html
+++ b/app/templates/shared/header.html
@@ -13,10 +13,10 @@
                 <a class="navbar-brand text-danger fw-bold display-4 me-5" href="{{ url_for('index') }}">PARPORA</a>
             </div>
             <div class="d-flex align-items-center flex-grow-1">
-                <form class="d-flex me-3 flex-grow-1" role="search">
-                    <input class="form-control me-2 flex-grow-1" type="search" placeholder="Search for products, e.g., milk" aria-label="Search">
+                <form class="d-flex me-3 flex-grow-1" action="{{ url_for('user.shop') }}" method="GET" role="search">
+                    <input class="form-control me-2 flex-grow-1" type="search" name="search" placeholder="Search for products, e.g., milk" aria-label="Search">
                     <button class="btn btn-outline-danger" type="submit">Search</button>
-                </form>
+                </form>                
                 <ul class="navbar-nav d-flex flex-row">
                     {% if current_user.is_authenticated %}
                         <li class="nav-item ms-3">
@@ -25,12 +25,14 @@
                         <li class="nav-item ms-3">
                             <a class="nav-link text-dark" href="{{ url_for('user.balance') }}">Balance: €{{ current_user.balance }}</a>
                         </li>
-                        <li class="nav-item ms-3">
-                            <a class="nav-link text-dark" href="{{ url_for('user.order_history') }}">Orders history</a>
-                        </li>
-                        <li class="nav-item ms-3">
-                            <a class="nav-link text-dark" href="{{ url_for('user.cart') }}">Cart</a>
-                        </li>
+                        {% if not current_user.is_admin %}
+                            <li class="nav-item ms-3">
+                                <a class="nav-link text-dark" href="{{ url_for('user.order_history') }}">Orders history</a>
+                            </li>
+                            <li class="nav-item ms-3">
+                                <a class="nav-link text-dark" href="{{ url_for('user.cart') }}">Cart</a>
+                            </li>
+                        {% endif %}
                         <li class="nav-item ms-3">
                             <a class="nav-link text-dark" href="{{ url_for('user.account') }}">Account</a>
                         </li>
@@ -59,31 +61,6 @@
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link red-bg active" aria-current="page" href="#">Products</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link red-bg" href="#">My Products</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link red-bg" href="#">Special Offers</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link red-bg" href="#">Discounts</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link red-bg" href="#">Eco & Farm</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link red-bg" href="#">New Products</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link red-bg" href="#">Flavor Days</a>
-                    </li>
-                </ul>
-            </div>
         </div>
     </nav>
 </body>
